kubernetes/fast-food-proxy-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sushi-proxy
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: sushi-proxy
  template:
    metadata:
      annotations:
        oneagent.dynatrace.com/inject: "false"
      labels:
        app: sushi-proxy
        rollout: fast-food-chain
    spec:
      containers:
        - name: sushi-proxy
          image: mreider/thumbs-up-proxy:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
