kubernetes/backend_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sushi-backend
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sushi-backend
  template:
    metadata:
      annotations:
        oneagent.dynatrace.com/inject: "false"
      labels:
        app: sushi-backend
        rollout: fast-food-chain
    spec:
      containers:
      - name: sushi-backend
        image: mreider/thumbs-up-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fast-food-backend-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: sushi-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
